2009-06-17  Claudio Saavedra  <csaavedra@igalia.com>

	* doc/hildon-sections.txt: Remove HILDON_DISABLE_DEPRECATED
	from HildonPickerDialog section.

2009-06-16  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-banner.c (hildon_banner_bind_style)
	(screen_size_changed, hildon_banner_init)
	(hildon_banner_real_show_information)
	(hildon_banner_show_information_with_markup)
	(hildon_banner_show_animation, hildon_banner_show_progress):
	Set a different widget name to banners in portrait mode, for them
	to be themed correctly.

2009-06-16  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-note.c (hildon_note_rename, screen_size_changed):
	Set a different widget name to notes in portrait mode, for them to
	be themed correctly.

	Partially fixes: NB#118401 (HildonNote causes unnecessary
	rescaling of images)

2009-06-16  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-note.c (hildon_note_class_init)
	(+hildon_note_size_request, screen_size_changed):
	Always request the full width of the screen.

	Fixes: NB#118375 (unnecessary rescaling of images)

2009-06-16  Alejandro G. Castro  <alex@igalia.com>

	* hildon/hildon-pannable-area.c,
	(hildon_pannable_area_init),
	(hildon_pannable_area_realize): Replaced old code adding flags in
	the object init, now we add it with the other flags in the realize
	method.

2009-06-16  Claudio Saavedra  <csaavedra@igalia.com>

	* hildon/hildon-note.c: (hildon_note_class_init): Several
	documentation improvements to the HildonNote widget.

2009-06-16  Claudio Saavedra  <csaavedra@igalia.com>

	* hildon/hildon-note.h: Document the HildonNoteType enumeration.

	Fixes: MB#4556 (HildonNoteType is undocumented)

2009-06-15  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-picker-button.c:
	Explain how HildonPickerButton sets the title of its dialog

	Fixes: MB#4528 (HildonPickerButton docs should mention how to set
	the title of its dialog)

2009-06-15  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-check-button.c: