@@ -75,6 +75,7 @@
     <xi:include href="xml/hildon-gtk.xml"/>
     <xi:include href="xml/hildon-defines.xml"/>
     <xi:include href="xml/hildon-helper.xml"/>
+    <xi:include href="xml/hildon-version.xml"/>
     <xi:include href="xml/hildon-sound.xml"/>
     <xi:include href="xml/hildon-program.xml"/>
   </part>
