@@ -1215,9 +1215,11 @@ HildonTouchSelectorEntryClass
 
 <SECTION>
 <FILE>hildon-version</FILE>
+<TITLE>Versioning Macros</TITLE>
 HILDON_MAJOR_VERSION
 HILDON_MINOR_VERSION
 HILDON_MICRO_VERSION
+HILDON_VERSION
 HILDON_CHECK_VERSION
 </SECTION>
 
