@@ -22,13 +22,54 @@
  *
  */
 
+/**
+ * SECTION:hildon-version
+ * @short_description: Versioning utility macros
+ *
+ * Hildon offers a set of macros for checking the version of the library
+ * an application was linked to.
+ */
+
 #ifndef                                         __HILDON_VERSION_H__
 #define                                         __HILDON_VERSION_H__
 
+/**
+ * HILDON_MAJOR_VERSION:
+ *
+ * The major version of the Hildon library (1, if %HILDON_VERSION is 1.2.3)
+ */
 #define HILDON_MAJOR_VERSION				    (@PACKAGE_VERSION_MAJOR@)
+
+/**
+ * HILDON_MINOR_VERSION:
+ *
+ * The minor version of the Hildon library (2, if %HILDON_VERSION is 1.2.3)
+ */
 #define HILDON_MINOR_VERSION				    (@PACKAGE_VERSION_MINOR@)
+
+/**
+ * HILDON_MICRO_VERSION:
+ *
+ * The micro version of the Hildon library (3, if %HILDON_VERSION is 1.2.3)
+ */
 #define HILDON_MICRO_VERSION				    (@PACKAGE_VERSION_MICRO@)
 
+/**
+ * HILDON_VERSION:
+ *
+ * The full version of the Hildon library, like 1.2.3
+ */
+#define HILDON_VERSION                                      (@PACKAGE_VERSION@)
+
+/**
+ * HILDON_CHECK_VERSION:
+ * @major: major version, like 1 in 1.2.3
+ * @minor: minor version, like 2 in 1.2.3
+ * @micro: micro version, like 3 in 1.2.3
+ *
+ * Evaluates to %TRUE if the version of the Hildon library is greater
+ * than @major, @minor and @micro
+ */
 #define	HILDON_CHECK_VERSION(major,minor,micro)	\
     (HILDON_MAJOR_VERSION > (major) || \
      (HILDON_MAJOR_VERSION == (major) && HILDON_MINOR_VERSION > (minor)) || \
